# immune_world

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/data/: _smoke.yaml
configs/experiment/: _smoke.yaml  ablation_loco_cancer.yaml  ablation_no_cross_cancer_transfer.yaml  ablation_no_gene_embed_pretrain.yaml  ablation_no_perturbation_engine.yaml  ablation_no_temporal_encoding.yaml  ablation_no_traj_attention.yaml  ablation_no_traj_no_pert.yaml  ablation_reduced_corpus.yaml  cohort_size_scan.yaml  compute_benchmark.yaml  deconvolution_pancreas.yaml  icb_response.yaml  main.yaml  perturbation_adamson.yaml  perturbation_k562.yaml  perturbation_norman.yaml  perturbation_rpe1.yaml  pretrain.yaml  sensitivity_H.yaml  sensitivity_L.yaml  sensitivity_alpha.yaml  sensitivity_d.yaml  sensitivity_lr.yaml  supplementary_failure_analysis.yaml  trajectory_bone_marrow.yaml  trajectory_dentate_gyrus.yaml  trajectory_pancreas.yaml
configs/model/: base.yaml
configs/train/: _smoke.yaml  base.yaml  finetune.yaml  pretrain.yaml
docs/: deviations.md  implementation-map.md  project-context.md  repo-plan.md
scripts/: benchmark_compute.py  failure_analysis.py  generate_figures.py  launch_eval.sh  launch_train.sh  prepare_data.sh  training_dynamics.py
src/immune_world/: __init__.py  __main__.py
src/immune_world/cli/: __init__.py  eval.py  export_onnx.py  infer.py  prepare_data.py  train.py
src/immune_world/data/: __init__.py  anndata_io.py  collate.py  icb.py  perturbation.py  preprocessing.py  pretrain_corpus.py  pseudotime.py  synthetic_bulk.py  trajectories.py
src/immune_world/evaluation/: __init__.py  ablation_eval.py  ablation_interaction.py  compute_benchmark.py  cross_cancer_eval.py  deconvolution_eval.py  extended_metrics.py  extra_baselines.py  icb_eval.py  perturbation_eval.py  runner.py  trajectory_eval.py
src/immune_world/losses/: __init__.py  composite.py  cross_cancer.py  perturbation.py  reconstruction.py  trajectory.py
src/immune_world/metrics/: __init__.py  deconvolution.py  icb.py  perturbation.py  statistics.py  trajectory.py
src/immune_world/models/: __init__.py  cross_cancer_transfer.py  gene_embedding.py  perturbation_engine.py  swiglu_ffn.py  trajectory_attention.py  transformer.py  transformer_layer.py  world_simulator.py
src/immune_world/models/heads/: __init__.py  deconvolution.py  icb.py  perturbation.py  trajectory.py
src/immune_world/training/: __init__.py  amp.py  checkpoint.py  distributed.py  finetune.py  optim.py  pretrain.py  trainer.py
src/immune_world/utils/: __init__.py  config.py  logging.py  paths.py  registry.py  seeding.py
tests/: conftest.py  test_package_import.py  test_seeding_and_paths.py  test_stubs_marked_skip.py
tests/data/: test_collate.py  test_synthetic_bulk.py
tests/losses/: test_losses.py
tests/metrics/: test_metrics.py
tests/models/: test_cross_cancer_transfer.py  test_gene_embedding.py  test_perturbation_engine.py  test_swiglu_ffn.py  test_trajectory_attention.py  test_transformer.py  test_world_simulator.py
tests/models/heads/: test_heads.py
tests/training/: test_checkpoint.py  test_training_smoke.py
