[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "immune_world"
version = "0.1.0"
description = "Foundation-model world simulator for tumour immune microenvironment trajectories (Sec. 1 of the paper)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ImmuneWorld team" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    # Core ML
    "torch>=2.3",
    # Config
    "hydra-core>=1.3,<1.4",
    "omegaconf>=2.3,<2.4",
    # Single-cell I/O
    "anndata>=0.10",
    "scanpy>=1.10",
    "scvelo>=0.3",
    # Numerics
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    # Metrics
    "dtw-python>=1.3",
    "lifelines>=0.28",
    "pingouin>=0.5",
    # I/O + UX
    "h5py>=3.11",
    "zarr>=2.18",
    "fsspec>=2024.3",
    "tqdm>=4.66",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# flash-attn requires a matching CUDA toolkit + nvcc. Install with `pip install .[gpu]` on
# a CUDA machine only. CI runs CPU-only and skips this extra.
gpu = [
    "flash-attn>=2.6,<2.7",
]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-xdist>=3.6,<4.0",
    "ruff>=0.4,<0.6",
    "black>=24.4,<25.0",
    "isort>=5.13,<6.0",
    "mypy>=1.10,<1.12",
    "pre-commit>=3.7,<4.0",
    "types-pyyaml>=6.0",
    "types-tqdm>=4.66",
]

[project.scripts]
immune-world-train      = "immune_world.cli.train:main"
immune-world-eval       = "immune_world.cli.eval:main"
immune-world-infer      = "immune_world.cli.infer:main"
immune-world-export     = "immune_world.cli.export_onnx:main"
immune-world-prep-data  = "immune_world.cli.prepare_data:main"

[tool.hatch.build.targets.wheel]
packages = ["src/immune_world"]

[tool.hatch.build.targets.sdist]
include = [
    "src/immune_world",
    "configs",
    "scripts",
    "docs",
    "tests",
    "README.md",
    "LICENSE",
]

# ----- ruff ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
extend-exclude = ["assets", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TC", "RUF"]
# Paper notation (α, ×, −, ℓ, ≤) is intentional in docstrings; keep PIE-friendly science style.
ignore = ["N812", "N806", "RUF001", "RUF002", "RUF003", "RUF022"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["immune_world"]

# ----- black + isort ------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["immune_world"]

# ----- mypy ---------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
files = ["src/immune_world"]
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "immune_world.cli.*"
disallow_untyped_decorators = false

# ----- pytest -------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "gpu: requires a CUDA device (skipped in CI)",
    "slow: takes longer than 5 s",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ----- coverage -----------------------------------------------------------
[tool.coverage.run]
source = ["src/immune_world"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
